<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppinsbold"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="jelly_bean" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_uname"
                    android:drawableRight="@drawable/ic_uname"
                    android:fontFamily="@font/poppinsmedium"
                    android:hint="@string/fname"
                    android:inputType="textPersonName"
                    tools:targetApi="jelly_bean" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutLname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_uname"
                    android:drawableRight="@drawable/ic_uname"
                    android:fontFamily="@font/poppinsmedium"
                    android:hint="@string/lname"
                    android:inputType="textPersonName"
                    tools:targetApi="jelly_bean" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_phone"
                    android:drawableRight="@drawable/ic_phone"
                    android:fontFamily="@font/poppinsmedium"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    tools:targetApi="jelly_bean" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPhone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_email"
                    android:drawableRight="@drawable/ic_email"
                    android:fontFamily="@font/poppinsmedium"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    tools:targetApi="jelly_bean" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
                tools:layout_editor_absoluteX="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_password"
                    android:drawableRight="@drawable/ic_password"
                    android:fontFamily="@font/poppinsmedium"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:targetApi="jelly_bean" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPasswordRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"
                tools:layout_editor_absoluteX="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordRepeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_password"
                    android:drawableRight="@drawable/ic_password"
                    android:fontFamily="@font/poppinsmedium"
                    android:hint="@string/passwordr"
                    android:inputType="textPassword"
                    tools:targetApi="jelly_bean" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spWilaya"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:autofillHints="mascara"
                android:background="@drawable/spbg"
                android:hint="@string/passwordr"
                android:text="@string/wilaya"
                tools:layout_editor_absoluteX="209dp"
                tools:layout_editor_absoluteY="86dp" />

            <Spinner
                android:id="@+id/spDaira"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/spbg"
                android:text="@string/daira"
                tools:layout_editor_absoluteX="209dp"
                tools:layout_editor_absoluteY="86dp" />

            <Spinner
                android:id="@+id/spCommune"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/spbg"
                android:hint="@string/commune"
                tools:layout_editor_absoluteX="209dp"
                tools:layout_editor_absoluteY="86dp" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spCommune" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="133dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/btn_round"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/signup"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progress" />

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/loginhere"
                android:textColor="#3F51B5"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
                tools:targetApi="jelly_bean" />


        </LinearLayout>

    </ScrollView>
    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_labelsPosition="left"
        app:layout_anchorGravity="bottom|right|end"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        app:fab_labelStyle="@style/LabelStyle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom">
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FF018786"
            app:fab_title="Developed by Houari ilies"
            app:fab_size="mini"
            app:fab_icon="@drawable/ic_user"/>
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FF018786"
            app:fab_title="iliessnp@gmail.com"
            app:fab_size="mini"
            app:fab_icon="@drawable/ic_mail"/>
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FF018786"
            app:fab_title="+213 7 93 29 96 94"
            app:fab_size="mini"
            app:fab_icon="@drawable/ic_phone"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>
